# ROS2-minimal-demo

./: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
install/cpp01_topic/share/cpp01_topic/: package.bash  package.zsh
log/: latest_build
src/: listener_str.cpp  listener_student.cpp  talker_str.cpp  talker_student.cpp
